--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/PRACTICA
+spring.datasource.url=jdbc:mysql://localhost:3306/PRACTICA?useSSL=false&serverTimezone=UTC
+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
@@ -9,3 +10,5 @@ server.er.include-message= always
 
 spring.datasource.username= root
 spring.datasource.password= 12345678
+
+server.error.include-stacktrace=never
